--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,22 @@
 	margin: 0;
 }
 body {
-	background-color: #f5f6fa;
+	/*background-color: #f5f6fa;*/
+	background-color: wheat;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+	
 }
 .app {
 	display: flex;
 	justify-content: space-evenly;
 	padding: 20px;
+}
+.app__dropdown{
+	background-color: white;
+}
+.app__header >h1{
+	color: #fc3c3c;
+	font-size: 2rem;
 }
 .app__header {
 	display: flex;
@@ -15,15 +25,32 @@ body {
 	align-items: center;
 	margin-bottom: 20px;
 }
+.app__left{
+	flex: 0.9;
+}
 .app__stats {
 	display: flex;
 	justify-content: space-between;
+}
+
+.app__right{
+	display: flex;
+	flex-direction: column;
+}
+.app__right .MuiCardContent-root{
+	flex-direction: column;
+	display: flex;
+	flex-grow: 1;
+}
+.app__graph{
+	flex-grow: 1;
+}
+.app__graphTitle{
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 @media (max-width: 990px) {
 	.app {
 		flex-direction: column;
 	}
-}
-.app__left{
-	flex: 0.9;
 }
